Added some notes

--- a/screenplay.fountain
+++ b/screenplay.fountain
@@ -141,9 +141,14 @@ Weitere Ideen:
 
 -   Ordner einsortieren
     3 Regalbretter mit roten/blauen/grünen Ordnern
-    Auf jedem Brett ist Platz für 10 Ordner und es sind 3-4 Lücken
+    Auf jedem Brett ist Platz für 10 Ordner und es sind 2-3 Lücken
     Die Ordner sind durchnummeriert und sortiert
     Der Spieler bekommt nacheinander einen Ordner und muss ihn in der richtigen
     Reihe an der richtigen Stelle einsortieren.
+
+Emil    Zählen        Ziffern gezeigt, Dinge abzählen
+Emma    Wiegen        Zahlen/Mengen vergleichen, Differenz abzählen
+Papa    Ordner        Zahlen im Zahlenstrahl einordnen
+Bauer   Eierkarton    6 zerlegen 0+6 = 1+5 = 2+4 = 3+3 = 4+2 = 5+1
 
 */
